--- a/Aprendizagem_WEB/estudo_simples/estudo_01.html
+++ b/Aprendizagem_WEB/estudo_simples/estudo_01.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset='utf-8'>
-        <title>Page Title</title>
-        <script type="text/javascript" src="test.js"></script>
-    </head>
-    <body>
-        <button onclick="clicando()">Aparecendo</button>
-        <button id="tue" onclick="tuezin()"></button>
-    </body>
+    <meta charset="utf-8" />
+    <title>Page Title</title>
+    <script type="text/javascript" src="test.js"></script>
+  </head>
+  <body>
+    <button onclick="clicando()">Aparecendo</button>
+    <button id="tue" onclick="tuezin()"></button>
+  </body>
 </html>
