--- a/Aprendizagem_WEB/estudo_simples/estudo_01.html
+++ b/Aprendizagem_WEB/estudo_simples/estudo_01.html
@@ -2,11 +2,12 @@
 <html>
     <head>
     <meta charset="utf-8" />
-    <title>Page Title</title>
-    <script type="text/javascript" src="test.js"></script>
+    <title>Estudo</title>
   </head>
   <body>
+    <h1 id = "inicio">Estudo</h1>
     <button onclick="clicando()">Aparecendo</button>
     <button id="tue" onclick="tuezin()"></button>
   </body>
+  <script type="text/javascript" src="test.js"></script>
 </html>
